[package]
name = "card-est-array"
version = "0.3.0"
edition = "2024"
description = "Infrastructure for managing large arrays of cardinality estimators."
repository = "https://github.com/vigna/card-est-array-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["cardinality", "estimator"]
categories = ["data-structures", "algorithms"]
authors = [
	"Matteo Dell'Acqua <dellacqua.matteo99@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]
rust-version = "1.85.0"

[features]
slow_tests = []

[dependencies]
num-primitive = "0.1"
num-traits = { version = "0.2.19", features = ["i128"] }
sync-cell-slice = "0.9.12"

[dev-dependencies]
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
